@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="script.module.oathscrapers" name="OathScrapers Module" version="1.00.04" provider-name="TheOath">
+<addon id="script.module.oathscrapers" name="OathScrapers Module" version="1.00.05" provider-name="TheOath">
     <requires>
         <!--<import addon="xbmc.python" version="2.20.0" />-->
         <import addon="script.module.beautifulsoup4" />
